Re-add mode-specific logo

--- a/css/boot.css
+++ b/css/boot.css
@@ -19,7 +19,7 @@ div.state-boot div.content {
   padding: 6vw 0;
 }
 
-div.state-boot img.logo {
+div.state-boot img.glowing-logo {
   width: 200px;
   height: 200px;
 }
