--- a/css/boot.css
+++ b/css/boot.css
@@ -19,6 +19,51 @@ div.state-boot div.content {
   padding: 6vw 0;
 }
 
+div.state-boot div.connection-failed {
+  text-align: center;
+  padding: 60px 100px;
+  border-radius: var(--win-border-rad);
+  border: var(--win-border);
+  background-color: var(--win-bg);
+  color: Var(--fg);
+}
+
+div.state-boot div.connection-failed img {
+  height: 96px;
+}
+
+div.state-boot div.connection-failed h1 {
+  margin: 25px 0;
+  margin-top: 5px;
+  font-size: 22px;
+}
+
+div.state-boot div.connection-failed p {
+  margin: 20px 0;
+}
+
+div.state-boot div.connection-failed button {
+  margin: 0;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 6px;
+  background-color: var(--button-bg);
+  color: var(--fg);
+}
+
+div.state-boot div.connection-failed button + button {
+  margin-left: 8px;
+}
+
+div.state-boot div.connection-failed button:hover {
+  background-color: var(--button-hover-bg);
+}
+
+div.state-boot div.connection-failed button:active {
+  background-color: var(--button-active-bg);
+  scale: 0.95;
+}
+
 div.state-boot img.glowing-logo {
   width: 200px;
   height: 200px;
